atualizando configuração do tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,3 +6,6 @@ set -g mouse on
 # count the panes from 1
 set -g base-index 1
 setw -g pane-base-index 1
+
+set-option -g status-position top
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
